sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:13: error: not found: value i
    	if (getValeur(i)>getValeur(i+1)) {
                      ^AlgCocktailSort1:13: error: not found: value i
    	if (getValeur(i)>getValeur(i+1)) {
                                   ^AlgCocktailSort1:14: error: not found: value i
      	echange(i,i+1)
                ^AlgCocktailSort1:14: error: not found: value i
      	echange(i,i+1)
                  ^